--- a/src/sorce code.ipynb
+++ b/src/sorce code.ipynb
@@ -1768,7 +1768,7 @@
     "              'PCT_FGM_ASSTD','PCT_FGM_UNASSTD', 'DWS', 'WS']\n",
     "\n",
     "for name in mm_columns:\n",
-    "    merged1[name] = mmscaler.fit_transform(pd.DataFrame(merged1[name]))\n",
+    "    merged1[name] = sscaler.fit_transform(pd.DataFrame(merged1[name]))\n",
     "    \n",
     "# enc1 = OrdinalEncoder(categories = [['2013-2014','2014-2015','2015-2016','2016-2017',\n",
     "#                                      '2017-2018','2018-2019']])\n",
