--- a/src/ML source code.ipynb
+++ b/src/ML source code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,8 +535,8 @@
     "        X_t = np.concatenate((X_t_cat,X_t_num),axis=1)\n",
     "        \n",
     "        data = []\n",
-    "        for i in range(10,21):\n",
-    "            for j in range(10,21):\n",
+    "        for i in range(10,31):\n",
+    "            for j in range(10,31):\n",
     "                reg = RandomForestRegressor(n_estimators=30,max_depth=i,max_features = j,random_state=random_state)\n",
     "                reg.fit(X_train,y_train)\n",
     "                data.append([i,j, reg, reg.score(X_train,y_train),reg.score(X_c, y_CV)])\n",
@@ -555,19 +555,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best max_depth and max_features on the 1th round: (19, 18)\n",
-      "The best max_depth and max_features on the 2th round: (19, 19)\n",
-      "The best max_depth and max_features on the 3th round: (20, 18)\n",
-      "The best max_depth and max_features on the 4th round: (16, 20)\n",
-      "The best max_depth and max_features on the 5th round: (16, 20)\n",
-      "test accuracy: 0.72 +/- 0.03\n"
+      "The best max_depth and max_features on the 1th round: (29, 24)\n",
+      "The best max_depth and max_features on the 2th round: (19, 28)\n",
+      "The best max_depth and max_features on the 3th round: (20, 26)\n",
+      "The best max_depth and max_features on the 4th round: (24, 28)\n",
+      "The best max_depth and max_features on the 5th round: (24, 28)\n",
+      "test accuracy: 0.74 +/- 0.03\n"
      ]
     }
    ],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,29 +764,32 @@
     "        CV_scores.append(cv_best)\n",
     "        r2.append(r2_score(y_test, y_test_pred))\n",
     "\n",
-    "        return CV_scores, r2, pair_best\n",
+    "    return CV_scores, r2, pair_best\n",
     "    #     return X_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best max_depth and sub sample on the 1th round: (10, 0.5, 5)\n",
-      "The best max_depth and sub sample on the 2th round: (3, 0.8, 1)\n",
-      "The best max_depth and sub sample on the 3th round: (3, 0.66, 1)\n",
-      "The best max_depth and sub sample on the 4th round: (30, 0.3, 1)\n",
-      "The best max_depth and sub sample on the 5th round: (30, 0.3, 5)\n",
-      "test accuracy: 0.83 +/- 0.01\n"
+      "The best max_depth and sub sample on the 1th round: (10, 0.3, 5)\n",
+      "The best max_depth and sub sample on the 2th round: (30, 0.3, 5)\n",
+      "The best max_depth and sub sample on the 3th round: (10, 0.5, 5)\n",
+      "The best max_depth and sub sample on the 4th round: (10, 0.3, 0)\n",
+      "The best max_depth and sub sample on the 5th round: (10, 0.5, 5)\n",
+      "test accuracy: 0.81 +/- 0.01\n"
      ]
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "test_scores_xgb = []\n",
     "\n",
     "for i in range(1,6):\n",
@@ -860,27 +863,6 @@
     "        test_scores.append(reg.score(X_t, y_test))\n",
     "        # test_scores.append(mean_squared_error(y_test,reg.predict(X_t)))\n",
     "    return reg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Lasso' object has no attribute 'feature_importances_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-b4ec7e00bf17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mreg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_im_las\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1234\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_importances_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Lasso' object has no attribute 'feature_importances_'"
-     ]
-    }
-   ],
-   "source": [
-    "reg = feature_im_las(X,y,1234,3)\n"
    ]
   },
   {
